add mobile version

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <strong>Email:</strong> <a href="mailto:infoapetrullo@gmail.com"><span style="color: #FFD700;">infoapetrullo@gmail.com</span></a><br>
                 <strong>Telegram:</strong> <a href="https://t.me/Pedro96" target="_blank"><span style="color: #FFD700;">@Pedro96</span></a><br>
                 <strong>LinkedIn:</strong>
-                <a href="https://www.linkedin.com/in/andrea-petrullo/" target="_blank">
+                <a href="www.linkedin.com/in/andrea-petrullo-3b857718b" target="_blank">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" style="height: 22px; vertical-align: middle; margin-right:4px;">
                 <span style="color: #FFD700;">Profilo LinkedIn</span>
                 </a>
